submission/api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  api-gateway
  namespace: default
  labels:
    app:  api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: walidelass/api-gateway:submission
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 30
        ports:
        - containerPort: 8080
          name:  api-gateway
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
  - name: http
    port: 8080
    targetPort: 8080
